tests/snapshots/integration__integration_tests__merge__merge_squash_llm_error.snap
---
source: tests/integration_tests/merge.rs
info:
  program: wt
  args:
    - merge
    - main
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: "[TEST_GIT_CONFIG]"
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1735776000"
    WORKTRUNK_BIN: ""
    WORKTRUNK_CONFIG_PATH: "[TEST_CONFIG]"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
🔄 [36mSquashing 2 commits into a single commit (2 files, [32m+2[0m)...[39m
🔄 [36mGenerating squash commit message...[39m
❌ [31mCommit generation command failed[39m
[107m [0m  Error: connection refused

⚪ Ran command:
[107m [0m  sh -c echo 'Error: connection refused' >&2 && exit 1
