tests/snapshots/integration__integration_tests__merge__merge_squash_with_llm.snap
---
source: tests/integration_tests/merge.rs
info:
  program: wt
  args:
    - merge
    - main
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: "[TEST_GIT_CONFIG]"
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1735776000"
    WORKTRUNK_BIN: ""
    WORKTRUNK_CONFIG_PATH: "[TEST_CONFIG]"
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
🔄 [36mSquashing 2 commits into a single commit (1 file, [32m+1[0m)...[39m
🔄 [36mGenerating squash commit message...[39m
[107m [0m  [1mfeat: implement user authentication system[22m
✅ [32mSquashed @ [2md42412f[39m[22m
🔄 [36mMerging 1 commit to [1mmain[22m @ [2md42412f[22m (no rebase needed)[39m
[107m [0m  * [33md42412f[m feat: implement user authentication system
[107m [0m   auth.txt | 1 [32m+[m
[107m [0m   1 file changed, 1 insertion(+)
✅ [32mMerged to [1mmain[22m (1 commit, 1 file, [32m+1[0m)[39m
🔄 [36mRemoving [1mfeature[22m worktree & branch in background[39m
